--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,24 @@
 	min-height: 100vh;
 }
 
-.bg-black {
+.search-bar {
+	font-size: inherit;
+	outline: none;
+	border-radius: 50rem 0 0 50rem;
+}
+
+.search-bar:focus {
+	border-radius: 50rem;
+}
+
+.search-button {
+	border-radius: 0 50rem 50rem 0;
 	background-color: black;
+	color: white;
+	transition: all 0.2s ease;
+}
+
+.search-button:hover {
+	background-color: white;
+	color: black;
 }
