--- a/src/App.css
+++ b/src/App.css
@@ -8,21 +8,23 @@
 .search-bar {
 	font-size: inherit;
 	outline: none;
-	border-radius: 50rem 0 0 50rem;
-}
-
-.search-bar:focus {
-	border-radius: 50rem;
 }
 
 .search-button {
-	border-radius: 0 50rem 50rem 0;
 	background-color: black;
 	color: white;
-	transition: all 0.2s ease;
+	transition: all 0.25s ease;
 }
 
 .search-button:hover {
 	background-color: white;
 	color: black;
+}
+
+.rounded-pill-left {
+	border-radius: 50rem 0 0 50rem;
+}
+
+.rounded-pill-right {
+	border-radius: 0 50rem 50rem 0;
 }
